<resources>
    <string name="app_name">kotlinproject</string>
    <string name="login">Entrar</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="login_subtitle">Acesse sua conta para continuar</string>
    <string name="or_divider">ou</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="continue_with_google">Continuar com Google</string>
    <string name="google_web_client_id">810169926219-5pbhfk5rtiupff4ea1s88p4ecpttu5ti.apps.googleusercontent.com</string>
    <string name="dont_have_an_account_register">Nao tem uma conta? Cadastre-se</string>
    <string name="login_successful">Login bem-sucedido.</string>
    <string name="authentication_failed">Falha na autenticacao.</string>
    <string name="please_fill_all_fields">Por favor, preencha todos os campos.</string>
    <string name="password_reset_email_sent">E-mail de redefinicao de senha enviado.</string>
    <string name="failed_to_send_password_reset_email">Falha ao enviar e-mail de redefinicao de senha.</string>
    <string name="please_enter_your_email">Por favor, insira seu e-mail.</string>
    <string name="mobiizy_logo">Logo da Mobiizy</string>
    <string name="app_logo">Logo do aplicativo</string>
    <string name="login_error_fill_email_password">Preencha e-mail e senha.</string>
    <string name="login_error_user_not_identified">Nao foi possivel identificar o usuario.</string>
    <string name="login_error_configure_google_client_id">Configure default_web_client_id no google-services.json para habilitar login Google.</string>
    <string name="login_error_google_credential_invalid">Credencial Google invalida.</string>
    <string name="login_error_google_token_read">Nao foi possivel ler token do Google.</string>
    <string name="login_prompt_recovery_email">Digite seu e-mail para recuperar a senha.</string>
    <string name="login_success_recovery_email_sent">E-mail de recuperacao enviado.</string>
    <string name="login_error_google_cancelled">Login Google cancelado.</string>
    <string name="login_error_google_no_accounts">Nenhuma conta Google disponivel neste dispositivo.</string>
    <string name="login_error_google_failed">Falha no login Google. Tente novamente.</string>
    <string name="login_error_generic">Nao foi possivel concluir o login. Tente novamente.</string>
    <string name="login_error_with_google_hint">%1$s Se voce criou sua conta com Google, toque em \"%2$s\".</string>
    <string name="login_reset_email_generic_result">Se existir uma conta com este e-mail, enviaremos o link de redefinicao. Se voce usa Google, entre com \"Continuar com Google\".</string>
    <string name="forgot_password_dialog_title">Redefinir senha</string>
    <string name="forgot_password_dialog_message">Informe o e-mail da conta para receber o link de redefinicao.</string>
    <string name="forgot_password_dialog_send_button">Enviar link</string>
    <string name="error_no_internet_check">Sem internet. Verifique sua conexao e tente novamente.</string>
    <string name="error_no_internet_try_again">Sem internet. Tente novamente.</string>
    <string name="error_no_internet_now">Sem internet no momento. Tente novamente.</string>
    <string name="error_invalid_email">E-mail invalido.</string>
    <string name="error_invalid_email_lower">e-mail invalido.</string>
    <string name="error_user_not_found">Usuario nao encontrado.</string>
    <string name="error_wrong_password">Senha incorreta.</string>
    <string name="error_invalid_credentials">Credenciais invalidas.</string>
    <string name="error_email_or_password_incorrect">E-mail ou senha incorretos.</string>
    <string name="error_account_disabled">Conta desativada.</string>
    <string name="error_too_many_attempts">Muitas tentativas. Aguarde e tente novamente.</string>
    <string name="error_enter_valid_email">Digite um e-mail valido.</string>
    <string name="error_passwords_do_not_match">As senhas nao conferem.</string>
    <string name="error_invalid_cpf">CPF invalido.</string>
    <string name="error_invalid_cnpj">CNPJ invalido.</string>
    <string name="error_provide_valid_cpf">Informe um CPF valido.</string>
    <string name="error_provide_valid_cnpj">Informe um CNPJ valido.</string>
    <string name="error_min_chars">Minimo de %1$s caracteres</string>
    <string name="error_required">Obrigatorio</string>
    <string name="validation_name_required">Nome obrigatorio</string>
    <string name="validation_email_required">E-mail obrigatorio</string>
    <string name="validation_email_invalid">Digite um e-mail valido</string>
    <string name="validation_password_required">Senha obrigatoria</string>
    <string name="validation_password_min_6">A senha deve ter pelo menos 6 caracteres</string>
    <string name="hello_world">Ola, Mundo!</string>
    <string name="main_logout_test">Logout (teste)</string>
    <string name="register_step_initial">Etapa 1 de 4</string>
    <string name="register_step_of_total">Etapa %1$d de %2$d</string>
    <string name="register_cancel">Sair do cadastro</string>
    <string name="register_back">Voltar</string>
    <string name="register_next">Avancar</string>
    <string name="register_finish">Finalizar</string>
    <string name="register_cancel_dialog_title">Cancelar cadastro?</string>
    <string name="register_cancel_dialog_message_with_draft">Se voce sair agora, o rascunho sera mantido e voce pode continuar depois.</string>
    <string name="register_cancel_dialog_message_without_draft">Voce quer voltar para o login?</string>
    <string name="register_cancel_dialog_action_continue">Continuar cadastrando</string>
    <string name="register_cancel_dialog_action_back_to_login">Voltar para login</string>
    <string name="register_cancel_dialog_action_discard_draft">Descartar rascunho</string>
    <string name="register_error_fill_email_to_finish">Preencha e-mail para finalizar.</string>
    <string name="register_error_fill_password_to_finish">Preencha senha para finalizar.</string>
    <string name="register_error_finish_failed">Erro ao finalizar cadastro.</string>
    <string name="register_error_create_account_with_reason">Erro ao criar conta: %1$s</string>
    <string name="register_error_finish_with_reason">Erro ao finalizar cadastro: %1$s</string>
    <string name="register_error_save_profile_with_reason">Erro ao salvar perfil: %1$s</string>
    <string name="register_error_email_already_in_use">esse e-mail ja esta em uso.</string>
    <string name="register_error_weak_password">senha fraca. Use pelo menos 6 caracteres.</string>
    <string name="register_error_operation_not_allowed">cadastro por e-mail/senha esta desativado no Firebase.</string>
    <string name="register_error_network_failure">falha de rede. Verifique sua conexao.</string>
    <string name="register_error_internal_firebase">erro interno do Firebase (verifique configuracao do projeto).</string>
    <string name="register_error_app_not_authorized">app nao autorizado. Confira package name e SHA no Firebase.</string>
    <string name="register_error_unknown">erro desconhecido.</string>
    <string name="register_error_with_code">%1$s [codigo: %2$s]</string>
    <string name="register_profile_photo_title">Foto de perfil</string>
    <string name="register_profile_photo_subtitle">Adicione uma foto para identificar sua conta.</string>
    <string name="register_error_profile_photo_required">Adicione uma foto de perfil para continuar.</string>
    <string name="register_profile_photo_source_dialog_title">Escolha como adicionar a foto</string>
    <string name="register_profile_photo_source_camera">Tirar foto</string>
    <string name="register_profile_photo_source_gallery">Escolher da galeria</string>
    <string name="register_profile_photo_source_cancel">Cancelar</string>
    <string name="register_profile_photo_camera_permission_title">Permitir uso da camera</string>
    <string name="register_profile_photo_camera_permission_message">Para tirar foto de perfil, permita o acesso a camera.</string>
    <string name="register_profile_photo_camera_permission_confirm">Permitir</string>
    <string name="register_profile_photo_camera_permission_denied">Sem permissao de camera, nao foi possivel tirar a foto.</string>
    <string name="register_address_use_current_location">Usar localizacao atual</string>
    <string name="register_address_use_current_location_loading">Buscando endereco atual...</string>
    <string name="register_address_location_permission_title">Permitir localizacao</string>
    <string name="register_address_location_permission_message">Para preencher o endereco automaticamente, permita o acesso a localizacao.</string>
    <string name="register_address_location_permission_confirm">Permitir</string>
    <string name="provider_vehicles_fragment_title">Gestao de veículos</string>
    <string name="provider_vehicles_fragment_subtitle">Cadastre carros, ajuste disponibilidade e revise informacoes de cada anuncio.</string>
    <string name="provider_vehicles_add_vehicle">Cadastrar novo veiculo</string>
    <string name="provider_vehicles_empty_state">Nenhum veiculo cadastrado ou em rascunho ate o momento.</string>
    <string name="vehicle_step3_required_photos_title">Fotos obrigatorias</string>
    <string name="vehicle_step3_required_photos_hint">Envie uma foto para cada item obrigatorio abaixo.</string>
    <string name="vehicle_error_required_photo_set">As 6 fotos obrigatorias precisam ser enviadas.</string>
    <string name="vehicle_step3_recommended_photos_title">Fotos recomendadas</string>
    <string name="vehicle_step3_recommended_photos_hint">Essas fotos aumentam a confianca do anuncio.</string>
    <string name="vehicle_error_minimum_six_photos">Informe no minimo 6 fotos.</string>
    <string name="vehicle_uploaded_photos_count_zero">Fotos enviadas: 0</string>
    <string name="vehicle_field_city_state">Cidade/UF</string>
    <string name="vehicle_field_neighborhood_region">Bairro/Regiao</string>
    <string name="vehicle_field_pickup_point">Ponto de retirada (aproximado)</string>
    <string name="vehicle_field_delivery_options">Opcoes de entrega</string>
    <string name="vehicle_delivery_pickup_on_location">Retirada no local</string>
    <string name="vehicle_delivery_by_fee">Entrega por taxa</string>
    <string name="vehicle_error_select_delivery_option">Escolha pelo menos uma opcao de entrega/retirada.</string>
    <string name="vehicle_field_delivery_radius">Raio da entrega (km)</string>
    <string name="vehicle_field_delivery_fee">Valor da entrega (R$)</string>
    <string name="vehicle_field_available_schedule">Horarios disponiveis por dia</string>
    <string name="vehicle_field_available_schedule_hint">Ative os dias que deseja disponibilizar e preencha inicio/fim ou marque dia todo.</string>
    <string name="vehicle_error_fill_one_schedule">Configure ao menos um dia com horario completo ou como dia todo.</string>
    <string name="vehicle_step7_checklist_title">Checklist final</string>
    <string name="vehicle_checklist_photos_ok">Fotos ok</string>
    <string name="vehicle_checklist_price_defined">Preco definido</string>
    <string name="vehicle_checklist_rules_defined">Regras definidas</string>
    <string name="vehicle_checklist_location_defined">Local definido</string>
    <string name="vehicle_error_complete_checklist_before_publish">Conclua o checklist antes de publicar.</string>
    <string name="vehicle_step7_edit_any_step">Editar qualquer etapa</string>
    <string name="vehicle_edit_step_1">Editar etapa 1</string>
    <string name="vehicle_edit_step_2">Editar etapa 2</string>
    <string name="vehicle_edit_step_3">Editar etapa 3</string>
    <string name="vehicle_edit_step_4">Editar etapa 4</string>
    <string name="vehicle_edit_step_5">Editar etapa 5</string>
    <string name="vehicle_edit_step_6">Editar etapa 6</string>
</resources>